k8s/techchallenge/ingress/tech-challenge-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-ingress
  namespace: techchallenge
  annotations:
    nginx.ingress.kubernetes.io/x-forwarded-port: "true"
    nginx.ingress.kubernetes.io/x-forwarded-host: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-app-service
                port:
                  number: 8357
